fixed overflow-x problem

--- a/src/components/Rockets/RocketContent.module.css
+++ b/src/components/Rockets/RocketContent.module.css
@@ -86,7 +86,7 @@
   }
 
   .text p:nth-of-type(2) {
-    padding: 0rem 7rem;
+    padding: 0rem 9rem;
   }
 
   .text h1 {
