--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,10 @@ svg {
     background: url("./assets/home/background-home-mobile.jpg") no-repeat center;
     background-size: cover;
     min-height: 100vh;
-    overflow: visible;
+  }
+
+  body,
+  html {
     overflow-x: hidden;
   }
 }
